--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Vujahday+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Vujahday+Script&display=swap');
 
 *,::after,::before {
   box-sizing: border-box;
@@ -39,6 +40,7 @@ header img {
   font-family: cursive;
   font-weight: bolder;
   font-size: 1.2rem;
+  cursor: pointer;
 }
 .subreddit_btn:hover,
 .subreddit_btn:focus { 
@@ -318,3 +320,36 @@ header img {
   margin-right: 2%;
 }
 .starringnames { font-size: .7rem;}
+/*---------------------------------------------------*/
+.reddit_subcontainer {
+
+  margin-top: 6rem;
+}
+.redditsection {
+  width: 21%;
+  display: inline-grid;
+  margin-left: 2%;
+  margin-right: 2%;
+  height: 38vh;
+  margin: 2vh 2% 2% 2%;
+  box-shadow: 0px 6px 9px rgba(0,0,125,.6);
+  cursor: pointer;
+  font-family: 'Bebas Neue', cursive;
+  text-align: center;
+  font-size: 2rem;
+  padding-top: 1rem;
+}
+.redditsection:hover {
+  background: -moz-linear-gradient(45deg ,black,indigo);
+  color: white;
+
+}
+.subreddit_para{
+  font-family: times new roman, veranda;
+
+}
+
+.subscribers_para {
+  font-size: 1.7rem;
+  font-family: 'Vujahday Script', cursive;
+}
