reddit continue build

--- a/src/index.css
+++ b/src/index.css
@@ -339,7 +339,8 @@ header img {
   font-size: 2rem;
   padding-top: 1rem;
 }
-.redditsection:hover {
+.redditsection:hover,
+.subreddit_section:hover {
   background: -moz-linear-gradient(45deg ,black,indigo);
   color: white;
 
@@ -354,3 +355,16 @@ header img {
   font-family: 'Vujahday Script', cursive;
 }
 
+.subreddit_section {
+  padding: 1rem 1%;
+}
+
+.subreddit_subcontainer h2,
+.reddit_subcontainer h2 {
+  text-align: center;
+  margin-bottom: 2rem;
+  font-size: 3rem;
+  color: #958c8c
+}
+.subreddit_subcontainer h2:before,
+.reddit_subcontainer h2:before { content: "r/";  }
