--- a/src/index.css
+++ b/src/index.css
@@ -484,6 +484,12 @@ a:visited { border-top: 1px solid green; }
     margin-left: 2%;
    }
   .series_moviechoice_container p {     margin-left: 40%;  }
+
+  .searchsuggestion_container {
+    width: 80%;
+    margin-left: 8%;
+  }
+  
   .searchseries_btn { margin-left: 3%; }
 
   .subtitle { margin-top: 1.5rem; }
@@ -560,6 +566,7 @@ a:visited { border-top: 1px solid green; }
     font-size: .5rem;
     width: 30%;
   }
+
 
 }
 
