--- a/src/index.css
+++ b/src/index.css
@@ -120,7 +120,6 @@ header img {
   width: 30%;
   margin: 0 auto;
   margin-top: .3%;
-  margin-bottom: 5%;
   display: flex;
   align-items: center;
 }
@@ -163,7 +162,6 @@ header img {
 .searchsuggestion_container {
   width: 30%;
   margin-left: 35%;
-  margin-top: 1%;
   background-color: rgb(251, 250, 245);
   height: 10rem;
   color:gray;
@@ -171,6 +169,7 @@ header img {
   position: absolute;
   z-index: 10;  
 }
+
 
 .searchsuggestion_container li {
   list-style: none;
@@ -189,9 +188,8 @@ header img {
 .searchbtn_svg { margin-top: 5%;}
 
 .loadingimg { 
-    margin-left: 30%;
-    width: 40%;
-    margin-top: 30%;
+    margin-left: 40%;
+    width: 20%;
  }
 
 .section_title { 
@@ -209,6 +207,8 @@ header img {
 }
 .cards:hover,
 .cardsimg:hover,
+.cards:focus,
+.cardsimg:focus,
 .form:hover,
 .form:focus { opacity: .7; }
 
@@ -350,7 +350,8 @@ header img {
   font-size: 2rem;
   padding-top: 1rem;
 }
-.redditsection:hover {
+.redditsection:hover,
+.redditsection:focus {
   background: -moz-linear-gradient(45deg ,black,indigo);
   color: white;
 
@@ -541,7 +542,8 @@ a:visited { border-top: 1px solid green; }
     }
   .subscribers_para { font-size: 1rem; }
 
-  .upvotepara { font-size: 2.5rem; }
+  .upvotepara { font-size: 1.5rem; }
+  .upvotecontainer { width: 25%; }
   .upvotesvg { 
     width: 2em;
     height: 4rem;
@@ -551,6 +553,7 @@ a:visited { border-top: 1px solid green; }
   .subredditpost_left {
     margin-right: 2%;
     margin-left: 5%;
+    width: 68%;
   }
   .subredditpost_left h4 { font-size: 1.1rem; }
   .subreddit_selftext { font-size: .8rem; }
