--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,11 @@ header img {
   height : auto;
   margin-top: .3rem;
   margin-left: 5%;
+  cursor: pointer;
 }
+header img:hover,
+header img:focus { border-bottom: 3px solid black; }
+
 .subreddit_btn {
   align-self: center;
   padding: 0.5rem 1rem;
@@ -440,7 +444,68 @@ a:visited { border-top: 1px solid green; }
   padding: .5rem 1rem;
 }
 
+footer {
+  margin-top: 3rem;
+  background-color: rgb(238, 238, 238);
+}
+.creditarticle {
+  padding: 3rem;
+  display: flex;
+  justify-content: center;
+}
+.creditsection {
+  width: 30%;
+  margin-left: 2%;
+  padding-top: .6rem;
+  padding-bottom: 1rem;
+}
+.creditsection:nth-of-type(1):hover,
+.creditsection:nth-of-type(1):focus { border-bottom: 3px solid rgb(49, 7, 105); }
+.creditsection:nth-of-type(2):hover,
+.creditsection:nth-of-type(2):focus  { border-bottom: 3px solid green;}
 
+.creditsection:nth-of-type(3) {
+  border-left: 1px solid black;
+  align-self: center;
+}
+.creditsection:nth-of-type(3):hover {
+  border-left: 3px solid green;
+
+}
+.creditsection h3 {
+  font-family: 'Bebas Neue', cursive;
+  font-size: 1.3rem;
+}
+.creditsection:nth-of-type(3) h3 {
+  padding-left: 3rem;
+  font-size: 1.4rem;
+}
+.creditsection:nth-of-type(1) p::before{  content: "-"}
+.creditsection:nth-of-type(2) p::before{  content: "~"}
+
+.creditsection a:hover,
+.creditsection a:focus {
+  text-decoration: underline;
+  text-decoration-color: gray; 
+}
+.creditsection:nth-of-type(3) a { color: gray;  }
+
+.creditsection:nth-of-type(3) a:hover,
+.creditsection:nth-of-type(3) a:focus {
+    text-decoration: underline;
+    text-decoration-color: green;
+}
+
+.creditsection p {
+  font-family: 'Vujahday Script', cursive;
+  font-size: 1.2rem;
+  padding-left: 3.4rem;
+  line-height: 2rem;
+
+}
+.lastpara {
+  text-align: center;
+}
 /*------------------Mobile Vesrion------------------------------*/
 
 @media screen and (max-width: 650px)  {
